# fastapi-tut

./: .gitignore  10_body_nested_models.py  11_declare_request_example_data.ipynb  11_declare_request_example_data.py  12_extra_data_types.ipynb  13-14.ipynb  13-16.ipynb  17_response_model_return_type.ipynb  18_extra_models.ipynb  19-22.ipynb  24_handling_errors.ipynb  25_path_operation_configuration.ipynb  26_json_compatible_encoder.ipynb  28-34.ipynb  35_36.ipynb  37_simple_oauth2_with_password_and_bearer.py  43_bigger_applications_multiple_files.ipynb  9_body_fields.py  README.md  body_mult_params.py  main.py  notes.md  pyproject.toml  requirements.txt  rxconfig.py
fastapi_tut/: fastapi_tut.py
